--- a/tensorflow/tensorflow/contrib/lite/examples/android/app/build.gradle
+++ b/tensorflow/tensorflow/contrib/lite/examples/android/app/build.gradle
@@ -2,7 +2,6 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "org.tensorflow.lite.demo"
         minSdkVersion 15
@@ -12,9 +11,9 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         // Remove this block.
-        jackOptions {
-            enabled true
-        }
+//        jackOptions {
+//            enabled true
+//        }
     }
     lintOptions {
         abortOnError false
@@ -39,6 +38,9 @@ repositories {
     maven {
         url 'https://google.bintray.com/tensorflow'
     }
+    maven {
+        url 'https://maven.google.com'
+    }
 }
 
 // import DownloadModels task
@@ -50,11 +52,17 @@ project.ext.TMP_DIR   = project.buildDir.toString() + '/downloads'
 apply from: "download-models.gradle"
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.androidx.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    compile 'org.tensorflow:tensorflow-lite:0.0.0-nightly'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+//    androidTestCompile('com.androidx.test.espresso:espresso-core:2.2.2', {
+//        exclude group: 'com.android.support', module: 'support-annotations'
+//    })
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+    androidTestImplementation 'androidx.test:runner:1.1.0'
+    androidTestImplementation 'androidx.test:rules:1.1.0'
 
-    testCompile 'junit:junit:4.12'
+    implementation 'org.tensorflow:tensorflow-lite:0.0.0-nightly'
+    implementation 'com.android.support:support-v4:26.0.0'
+//    implementation 'com.android.support.v4.app'
+
+    testImplementation 'junit:junit:4.12'
 }
