--- a/tensorflow/tensorflow/contrib/lite/examples/android/build.gradle
+++ b/tensorflow/tensorflow/contrib/lite/examples/android/build.gradle
@@ -1,10 +1,11 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
+        google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:3.3.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -20,5 +21,5 @@ task clean(type: Delete) {
 }
 
 dependencies {
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    //implementation 'com.android.support:support-core-utils:28.0.0'
 }
